--- a/pyt-contabilidad/pyt-app/src/main/resources/view/actividadIca/actividadIca.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/actividadIca/actividadIca.fxml
@@ -11,7 +11,7 @@
 
 <BorderPane fx:id="pane" maxHeight="-1.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="193.0" prefWidth="489.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.actividadIca.ActividadIcaCRUBean">
   <bottom>
-    <FlowPane fx:id="buttons" alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER"/>
+    <FlowPane fx:id="buttons" alignment="CENTER"  prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER"/>
   </bottom>
   <center>
     <GridPane fx:id="fields" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="469.0" BorderPane.alignment="CENTER"/>
