--- a/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/ConfigService.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/config/servicios/ConfigService.fxml
@@ -12,20 +12,7 @@
 
 <BorderPane prefHeight="642.0" prefWidth="578.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.config.ConfigServiceBean">
   <bottom>
-    <HBox alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="578.0" BorderPane.alignment="CENTER">
-      <children>
-        <Button fx:id="btnAnterior" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#anterior" text="Anterior">
-          <HBox.margin>
-            <Insets right="10.0" fx:id="x1" />
-          </HBox.margin>
-        </Button>
-        <Button fx:id="btnSiguiente" alignment="CENTER" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#siguiente" text="Siguiente" HBox.margin="$x1" />
-        <Button fx:id="btnCancelar" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
-      </children>
-      <padding>
-        <Insets bottom="5.0" />
-      </padding>
-    </HBox>
+    <HBox fx:id="moveButtons" alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="578.0" BorderPane.alignment="CENTER"/>
   </bottom>
   <center>
     <TabPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="357.0" prefWidth="450.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
@@ -55,30 +42,7 @@
                         <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                       </GridPane.margin>
                     </TableView>
-                    <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="479.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER">
-                      <children>
-                        <Button fx:id="btnAddMark" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addMarcador" onMouseClicked="#addMarcador" text="Agregar">
-                          <HBox.margin>
-                            <Insets right="5.0" />
-                          </HBox.margin>
-                        </Button>
-                        <Button fx:id="btnUpdateMark" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#updMarcador" text="%fxml.btn.update">
-                          <HBox.margin>
-                            <Insets right="5.0" />
-                          </HBox.margin>
-                        </Button>
-                        <Button fx:id="btnEliminar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#delMarcador" text="Eliminar">
-                          <HBox.margin>
-                            <Insets left="5.0" />
-                          </HBox.margin>
-                        </Button>
-                        <Button fx:id="btnLimpiar" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cleanMarcador" text="%fxml.btn.clean">
-                          <HBox.margin>
-                            <Insets left="5.0" />
-                          </HBox.margin>
-                        </Button>
-                      </children>
-                    </HBox>
+                    <HBox fx:id="markButtons" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="21.0" prefWidth="479.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER"/>
                     <Label fx:id="totalMarcador" alignment="CENTER_RIGHT" contentDisplay="LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Total: 0" GridPane.columnIndex="3" GridPane.rowIndex="4">
                       <GridPane.margin>
                         <Insets right="25.0" />
@@ -165,16 +129,12 @@
                         </TableColumn>
                       </columns>
                     </TableView>
-                    <HBox alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6">
-                      <children>
-                        <Button fx:id="btnDelServicio" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#delServicioCampo" text="Eliminar" />
-                      </children>
-                    </HBox>
+                    <HBox fx:id="serviceButtons" alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6"/>
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Columna" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                     <TextField fx:id="columna" maxHeight="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="0" GridPane.rowIndex="3" />
                     <ChoiceBox fx:id="lstMarcadorIn" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                    <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#addServicioCampo" text="Agregar" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+                    <HBox fx:id="addServiceButtons" alignment="CENTER" prefHeight="39.0" prefWidth="396.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3"/>
                     <Label fx:id="totalServicio" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Total: 0" GridPane.columnIndex="3" GridPane.rowIndex="6">
                       <GridPane.margin>
                         <Insets right="10.0" fx:id="x1" />
@@ -214,7 +174,7 @@
                     <ChoiceBox fx:id="campo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                     <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Marcador" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                     <ChoiceBox fx:id="marcador" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                    <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregar" text="Agregar" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+                    <HBox fx:id="associacionButtons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"  GridPane.columnIndex="4" GridPane.rowIndex="1" />
                     <TableView fx:id="lstMarcadoresCampos" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" onMouseClicked="#servicioMarcador" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.rowIndex="2">
                       <columns>
                         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="236.0" text="Servicio">
@@ -234,16 +194,7 @@
                         </TableColumn>
                       </columns>
                     </TableView>
-                    <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="5">
-                      <children>
-                        <Button fx:id="btnSaveMarcador" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#guardar" text="Guardar">
-                          <HBox.margin>
-                            <Insets right="10.0" fx:id="x1" />
-                          </HBox.margin>
-                        </Button>
-                        <Button fx:id="btnDelMarcador" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
-                      </children>
-                    </HBox>
+                    <HBox fx:id="associacion2Buttons" alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="5"/>
                     <HBox fx:id="paginatorAsociar" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="5" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
                     <Label fx:id="totalAsociar" alignment="CENTER_RIGHT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Total: 0" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowIndex="3">
                       <GridPane.margin>
@@ -283,9 +234,7 @@
                     <Font size="15.0" />
                   </font>
                 </Label>
-                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#generar" text="Generar" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#saveAll" text="Guardar Todo" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                <Label fx:id="lNameFiler" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre Archivo Entrada" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                <HBox fx:id="configButtons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="2" GridPane.rowIndex="5" />
                 <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="64.0" prefWidth="210.0" text="Nombre Configuración" GridPane.columnIndex="0" GridPane.rowIndex="1" />
                 <Label fx:id="lNameFilerOut" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre Archivo Salida" GridPane.columnIndex="0" GridPane.rowIndex="4" />
                 <TextField fx:id="nameFilerOut" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="32.0" prefWidth="398.0" GridPane.columnIndex="1" GridPane.columnSpan="3" GridPane.rowIndex="4" />
