--- a/pyt-contabilidad/pyt-app/src/main/resources/view/Template.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/Template.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.control.TextField?>
 
-<BorderPane maxHeight="-Infinity"  maxWidth="-Infinity" prefHeight="800" prefWidth="1024" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.load.Template">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="800" prefWidth="1024" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.load.Template">
 	<top>
 		<MenuBar fx:id="menu" BorderPane.alignment="CENTER" />
 	</top>
@@ -60,13 +60,26 @@
 		</VBox>
 	</right>
 	<center>
-		<ScrollPane fx:id="scroller" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER" fitToWidth="true">
-			<content>
-				<VBox fx:id="principal" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: red;" />
-			</content>
-			<BorderPane.margin>
-				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-			</BorderPane.margin>
-		</ScrollPane>
+            <BorderPane prefHeight="200.0" prefWidth="200.0">
+               <top>
+                  <HBox fx:id="topBodyTemplate" alignment="CENTER_RIGHT" maxWidth="1.7976931348623157E308" prefHeight="28.0" prefWidth="914.0" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets top="5.0" />
+               </BorderPane.margin>
+               <padding>
+                  <Insets top="5.0" />
+               </padding></HBox>
+               </top>
+               <center>
+             	<ScrollPane fx:id="scroller" fitToWidth="true" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="776.0" prefWidth="914.0" BorderPane.alignment="CENTER">
+      		 <content>
+      		   <VBox fx:id="principal" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: red;" />
+               </content>
+      		 <BorderPane.margin>
+      		  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+      		 </BorderPane.margin>
+      		</ScrollPane>
+               </center>
+            </BorderPane>
 	</center>
 </BorderPane>
