--- a/pyt-contabilidad/pyt-app/src/main/resources/view/help/show.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/help/show.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.*?>
 <?import javafx.scene.web.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="543.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.help.HelpViewBean">
+<BorderPane fx:id="panel" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="365.0" prefWidth="543.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.help.HelpViewBean">
   <bottom>
     <ScrollPane minHeight="29.0" prefHeight="38.0" prefWidth="543.0">
       <content>
@@ -20,7 +20,7 @@
   <center>
     <ScrollPane prefHeight="292.0" prefWidth="321.0">
       <content>
-        <WebView id="bodyPanel" fx:id="wvCenter" prefHeight="291.0" prefWidth="457.0" />
+        <WebView  fx:id="wvCenter" prefHeight="291.0" prefWidth="457.0" />
       </content>
     </ScrollPane>
   </center>
@@ -32,6 +32,6 @@
     </ScrollPane>
   </right>
   <top>
-    <WebView id="titlePanel" fx:id="wvTittle" prefHeight="29.0" prefWidth="543.0" />
+    <WebView fx:id="wvTittle" prefHeight="29.0" prefWidth="543.0" />
   </top>
 </BorderPane>
