--- a/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
@@ -10,20 +10,7 @@
 
 <BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="207.99997792968497" prefWidth="272.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.users.LoginBean">
   <bottom>
-    <FlowPane alignment="CENTER"  prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="CENTER">
-      <children>
-        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#connect" text="%fxml.form.button.connect" />
-        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#clearAll" text="%fxml.form.button.clear.all">
-          <FlowPane.margin>
-            <Insets left="10.0" right="10.0" />
-          </FlowPane.margin>
-        </Button>
-        <Button maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#cancel" text="%fxml.form.button.cancel" />
-      </children>
-      <BorderPane.margin>
-        <Insets bottom="10.0" />
-      </BorderPane.margin>
-    </FlowPane>
+    <HBox fx:id="buttons" alignment="CENTER"  prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="CENTER"/>
   </bottom>
   <center>
     <GridPane alignment="CENTER" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" vgap="5.0" BorderPane.alignment="CENTER">
