--- a/pyt-contabilidad/pyt-app/src/main/resources/view/persona/personas.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/persona/personas.fxml
@@ -15,12 +15,12 @@
     <HBox fx:id="buttons" alignment="CENTER"  prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER"/>
   </bottom>
   <center>
-    <GridPane fx:id="fields" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="489.0" BorderPane.alignment="CENTER">
+    <GridPane fx:id="fields" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="489.0" BorderPane.alignment="CENTER"/>
   </center>
   <top>
     <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
       <children>
-        <Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Empleado" textAlignment="CENTER">
+        <Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.title.person" textAlignment="CENTER">
           <font>
             <Font name="System Bold Italic" size="18.0" />
           </font>
