--- a/pyt-contabilidad/pyt-app/src/main/resources/view/toggle/toggle.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/toggle/toggle.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.toggle.ToggleBean">
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="366.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.beans.toggle.ToggleBean">
   <bottom>
     <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="-1.0">
       <children>
@@ -21,7 +21,7 @@
               </GridPane.margin>
             </Label>
             <RadioButton fx:id="rfSelected" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-            <HBox fx:id="buttons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="-1.0"/>
+            <HBox fx:id="buttons" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="33.0" prefWidth="-1.0" GridPane.columnIndex="2" GridPane.columnSpan="2" />
           </children>
           <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="166.0" minWidth="10.0" prefWidth="146.0" />
@@ -39,7 +39,7 @@
   <center>
     <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0">
       <children>
-        <TableView fx:id="tabla" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0"/>
+        <TableView fx:id="tabla" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="-1.0" prefWidth="-1.0" />
         <HBox fx:id="paginator" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="100.0" prefWidth="-1.0" visible="true">
           <rotationAxis>
             <Point3D z="10.0" />
@@ -52,6 +52,6 @@
     <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
   </padding>
   <top>
-    <GridPane fx:id="filter" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"/>
+    <GridPane fx:id="filter" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" />
   </top>
 </BorderPane>
