feature aplicando contabilidad Se realiza ajuste de problema encontrado con la logica de las tablas sin ningun registro, ademas de probar con la hoja de estilis sobre los botones

--- a/pyt-contabilidad/pyt-app/src/main/resources/styles/principal.css
+++ b/pyt-contabilidad/pyt-app/src/main/resources/styles/principal.css
@@ -2,8 +2,13 @@
  -fx-margin: 10px;
 }
 
-button{
+.button{
  -fx-border-color : orange;
+ -fx-background-color: orange;
+}
+
+.button:hover{
+-fx-background-color: yellow;
 }
 
 .grid-standard{
