--- a/pyt-contabilidad/pyt-app/src/main/resources/view/banco/banco.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/banco/banco.fxml
@@ -67,7 +67,7 @@
 	<top>
 		<HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
 			<children>
-				<Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+				<Label fx:id="titulo" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
 					text="Banco" textAlignment="CENTER">
 					<font>
 						<Font name="System Bold Italic" size="18.0" />
