--- a/pyt-contabilidad/pyt-app/src/main/resources/view/menu/listmenus.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/menu/listmenus.fxml
@@ -33,7 +33,7 @@
   <top>
     <HBox prefHeight="31.0" prefWidth="400.0">
       <children>
-        <Label fx:id="lblTitle" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="21.0" prefWidth="366.0" text="Lista" textAlignment="CENTER">
+        <Label fx:id="lblTitle" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="21.0" prefWidth="366.0" text="Lista" textAlignment="CENTER">
           <HBox.margin>
             <Insets bottom="5.0" left="20.0" right="10.0" top="5.0" />
           </HBox.margin>
