--- a/pyt-contabilidad/pyt-app/src/main/resources/view/parametroInventarios/parametroInventarios.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/parametroInventarios/parametroInventarios.fxml
@@ -52,6 +52,6 @@
     </GridPane>
   </center>
    <top>
-      <Label fx:id="lblTitle" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="435.0" text="Label" BorderPane.alignment="CENTER" />
+      <Label fx:id="lblTitle" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="435.0" text="Label" BorderPane.alignment="CENTER" />
    </top>
 </BorderPane>
