--- a/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/users/login.fxml
@@ -62,7 +62,7 @@
   <top>
     <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
       <children>
-        <Label fx:id="title" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Login" textAlignment="CENTER">
+        <Label fx:id="title" alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Login" textAlignment="CENTER">
           <font>
             <Font name="System Bold Italic" size="18.0" />
           </font>
