feature aplciando contabilidaid se realiza ajustes para mostrar formato de desto en el listado principal, se agrgea tambien el campo formato sobre la creacion de formularios dinamicos

--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/documento.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/documento.fxml
@@ -10,9 +10,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.*?>
 
-<BorderPane maxWidth="1.7976931348623157E308" prefHeight="736.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.beans.dinamico.FormularioBean">
+<BorderPane maxWidth="1.7976931348623157E308" prefHeight="800.0" prefWidth="574.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.beans.dinamico.FormularioBean">
   <bottom>
-    <HBox fx:id="buttons" alignment="CENTER" maxHeight="1.7976931348623157E308" minHeight="16.0" prefHeight="36.0" prefWidth="554.0" />
+    <HBox fx:id="buttons" alignment="CENTER" maxHeight="1.7976931348623157E308" minHeight="16.0" prefHeight="28.0" prefWidth="554.0" />
   </bottom>
   <center>
     <GridPane alignment="CENTER" hgap="5.0" prefHeight="614.0" prefWidth="554.0" vgap="5.0">
@@ -71,7 +71,7 @@
           </columns>
         </TableView>
         <HBox fx:id="paginator" prefHeight="31.0" prefWidth="500.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="3" />
-        <GridPane fx:id="row6" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="208.0" prefWidth="545.0" vgap="5.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="4">
+        <GridPane fx:id="row6" hgap="5.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="279.0" prefWidth="545.0" vgap="5.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.rowIndex="4">
           <children>
             <Label fx:id="lNombreCampo" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Nombre Campo" GridPane.columnIndex="0" GridPane.rowIndex="0">
               <GridPane.margin>
@@ -81,7 +81,7 @@
             <ChoiceBox fx:id="nombreCampo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="0" />
             <CheckBox fx:id="editable" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Editable" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.halignment="LEFT" GridPane.margin="$x1" GridPane.rowIndex="1" />
             <CheckBox fx:id="obligatorio" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Obligatorio" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.margin="$x1" GridPane.rowIndex="1" />
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="7">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="0" GridPane.columnSpan="4" GridPane.halignment="CENTER" GridPane.rowIndex="8">
               <children>
                 <Button fx:id="addItem" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#agregarItem" text="Agregar Item" />
                 <Button fx:id="modifyItem" maxHeight="1.7976931348623157E308" mnemonicParsing="false" onAction="#modificarItem" text="Modificar Item">
@@ -118,6 +118,8 @@
             </CheckBox>
             <TextField fx:id="fieldDefaultValue" maxHeight="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
             <Label fx:id="labelDefaultValue" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Valor por defecto" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+            <TextField fx:id="fieldFormat" maxHeight="1.7976931348623157E308" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label fx:id="labelFormat" alignment="CENTER_LEFT" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Formato" GridPane.columnIndex="0" GridPane.rowIndex="7" />
             <CheckBox fx:id="fieldIsVisible" alignment="CENTER_LEFT" contentDisplay="CENTER" disable="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" text="Es visible" visible="true" GridPane.columnIndex="1" GridPane.rowIndex="6" />
           </children>
           <columnConstraints>
@@ -127,14 +129,15 @@
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="131.0" />
           </columnConstraints>
           <rowConstraints>
-            <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="38.0" minHeight="0.0" prefHeight="20.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="19.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="84.0" minHeight="8.0" prefHeight="21.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="102.0" minHeight="0.0" prefHeight="23.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="116.0" minHeight="10.0" prefHeight="21.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="83.0" prefHeight="21.0" />
-            <RowConstraints maxHeight="83.0" prefHeight="31.0" />
+            <RowConstraints maxHeight="39.0" minHeight="10.0" prefHeight="29.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="38.0" minHeight="0.0" prefHeight="24.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="62.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="84.0" minHeight="8.0" prefHeight="28.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="102.0" minHeight="0.0" prefHeight="29.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="116.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="83.0" minHeight="15.0" prefHeight="26.0" />
+            <RowConstraints maxHeight="94.0" minHeight="15.0" prefHeight="24.0" />
+                  <RowConstraints maxHeight="78.0" minHeight="20.0" prefHeight="24.0" />
           </rowConstraints>
         </GridPane>
             <Label fx:id="lblCopyTo" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="%fxml.lbl.copy.to" GridPane.rowIndex="1" />
@@ -148,12 +151,12 @@
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="118.0" minWidth="10.0" prefWidth="90.0" />
       </columnConstraints>
       <rowConstraints>
-        <RowConstraints maxHeight="255.0" minHeight="10.0" prefHeight="33.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="255.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="290.0" minHeight="9.0" prefHeight="282.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="401.0" minHeight="10.0" prefHeight="26.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="308.0" minHeight="10.0" prefHeight="233.0" vgrow="SOMETIMES" />
-        <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="23.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="255.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="255.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="359.0" minHeight="9.0" prefHeight="338.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="401.0" minHeight="5.0" prefHeight="24.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="308.0" minHeight="10.0" prefHeight="273.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="261.0" minHeight="10.0" prefHeight="18.0" vgrow="SOMETIMES" />
       </rowConstraints>
     </GridPane>
   </center>
