--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/formulario.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/formulario.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.BorderPane?>
 
 <BorderPane maxWidth="1.7976931348623157E308" prefWidth="258.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
-	fx:controller="org.pyt.app.beans.dinamico.DocumentoBean" style="-fx-border-color:orange;-fx-border-width:1;">
+	fx:controller="org.pyt.app.beans.dinamico.DocumentoBean">
 	<!-- TODO Add Nodes -->
 	<bottom>
 		<HBox fx:id="buttons" alignment="CENTER" prefHeight="26.0" prefWidth="200.0"/>
