--- a/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/panel.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/dinamico/panel.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxWidth="1.7976931348623157E308" prefHeight="533.0" style="-fx-border-color:red;-fx-border-width:1;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.dinamico.PanelBean">
+<BorderPane maxWidth="1.7976931348623157E308" prefHeight="533.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.dinamico.PanelBean">
   <!-- TODO Add Nodes -->
   <center>
-    <VBox fx:id="central" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" style="-fx-border-color:green;-fx-border-width:1;" BorderPane.alignment="TOP_CENTER">
+    <VBox fx:id="central" alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-1.0" minWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" BorderPane.alignment="TOP_CENTER">
       <padding>
         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
       </padding>
