--- a/pyt-contabilidad/pyt-app/src/main/resources/view/guiaIngresos/listIngresos.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/guiaIngresos/listIngresos.fxml
@@ -10,40 +10,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="664.0"
-	style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
-	fx:controller="org.pyt.app.beans.GuiaIngresos.ListIngresosBean">
+<BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="664.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.beans.GuiaIngresos.ListIngresosBean">
 	<bottom>
-		<HBox fx:id="buttons" alignment="CENTER" BorderPane.alignment="CENTER"/>
+		<HBox fx:id="buttons" alignment="CENTER" BorderPane.alignment="CENTER" />
 	</bottom>
 	<center>
 		<BorderPane prefHeight="200.0" prefWidth="200.0">
 			<bottom>
-				<GridPane alignment="CENTER" gridLinesVisible="false" maxWidth="-1.0" minWidth="-1.0" padding="$x1" prefWidth="-1.0"
-					BorderPane.alignment="CENTER">
-					<children>
-						<HBox fx:id="paginador" alignment="CENTER" maxWidth="-1.0" prefHeight="40.0" prefWidth="400.0" GridPane.columnIndex="1"
-							GridPane.rowIndex="0">
-							<GridPane.margin>
-								<Insets top="10.0" fx:id="x1" />
-							</GridPane.margin>
-						</HBox>
-					</children>
-					<columnConstraints>
-						<ColumnConstraints hgrow="SOMETIMES" maxWidth="76.0" minWidth="10.0" prefWidth="76.0" />
-						<ColumnConstraints hgrow="SOMETIMES" maxWidth="220.0" minWidth="10.0" prefWidth="220.0" />
-						<ColumnConstraints hgrow="SOMETIMES" maxWidth="76.0" minWidth="10.0" prefWidth="76.0" />
-					</columnConstraints>
-					<rowConstraints>
-						<RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
-					</rowConstraints>
-				</GridPane>
+                  <VBox prefHeight="80.0" prefWidth="100.0">
+                     <children>
+      						<HBox fx:id="paginador" alignment="CENTER" maxWidth="-1.0" prefHeight="40.0" prefWidth="400.0" />
+                     </children>
+                  </VBox>
 			</bottom>
 			<center>
-				<TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity"
-					minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="618.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
+				<TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTable" prefWidth="618.0" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
 					<columns> 
-						<TableColumn fx:id="empresa" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Empresa"/>
+						<TableColumn fx:id="empresa" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Empresa" />
 						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="194.0" text="Descripcion">
 							<cellValueFactory>
 								<PropertyValueFactory property="descripcion" />
@@ -54,12 +37,12 @@
 								<PropertyValueFactory property="placaVehiculo" />
 							</cellValueFactory>
 						</TableColumn>
-						<TableColumn prefWidth="75.0" text="Entrada" >
+						<TableColumn prefWidth="75.0" text="Entrada">
 							<cellValueFactory>
 								<PropertyValueFactory property="fechaEntrada" />
 							</cellValueFactory>
 						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="110.0" text="Tel:. Contacto" >
+						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="110.0" text="Tel:. Contacto">
 							<cellValueFactory>
 								<PropertyValueFactory property="telefonoContacto" />
 							</cellValueFactory>
@@ -73,11 +56,9 @@
 		</BorderPane>
 	</center>
 	<top>
-		<GridPane cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-			mouseTransparent="false" pickOnBounds="true" prefWidth="512.0" BorderPane.alignment="CENTER">
+		<GridPane cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefWidth="512.0" BorderPane.alignment="CENTER">
 			<children>
-				<Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Placa Vehiculo" textAlignment="LEFT" wrapText="true"
-					GridPane.rowIndex="1">
+				<Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Placa Vehiculo" textAlignment="LEFT" wrapText="true" GridPane.rowIndex="1">
 					<GridPane.margin>
 						<Insets bottom="5.0" top="5.0" />
 					</GridPane.margin>
@@ -97,8 +78,7 @@
 						<Insets bottom="5.0" right="5.0" top="5.0" />
 					</GridPane.margin>
 				</TextField>
-				<Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-					text="Lista Guias de Ingresos" textAlignment="CENTER" GridPane.columnSpan="4">
+				<Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Lista Guias de Ingresos" textAlignment="CENTER" GridPane.columnSpan="4">
 					<font>
 						<Font name="System Bold Italic" size="18.0" />
 					</font>
