--- a/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
@@ -15,15 +15,15 @@
 	style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
 	fx:controller="org.pyt.app.beans.cuentaContable.CuentaContableBean">
 	<bottom>
-		<FlowPane fx:id="buttons" alignment="CENTER" BorderPane.alignment="CENTER"/>
+		<FlowPane fx:id="buttons" alignment="CENTER" BorderPane.alignment="CENTER" prefHeight="80.0/>
 	</bottom>
 	<center>
-		<BorderPane prefHeight="200.0" prefWidth="200.0">
+		<BorderPane prefHeight="80.0" prefWidth="200.0">
 			<bottom>
 				<GridPane alignment="CENTER" gridLinesVisible="false" maxWidth="-1.0" minWidth="-1.0" padding="$x1" prefWidth="-1.0"
 					BorderPane.alignment="CENTER">
 					<children>
-						<HBox fx:id="paginador" alignment="CENTER" maxWidth="-1.0" prefHeight="40.0" prefWidth="400.0" GridPane.columnIndex="1"
+						<HBox fx:id="paginador" alignment="CENTER" maxWidth="-1.0" prefHeight="50.0" prefWidth="400.0" GridPane.columnIndex="1"
 							GridPane.rowIndex="0">
 							<GridPane.margin>
 								<Insets top="10.0" fx:id="x1" />
