aplicando contabilidad se encontraron problemas con la forma de cambiar entre usuario, que se realizo solucion, se inicia el proceso de solucionar poder colocar macadores de dto dentro de dto para mostrar determinados valores

--- a/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
+++ b/pyt-contabilidad/pyt-app/src/main/resources/view/cuentaContable/listCuentaContable.fxml
@@ -15,7 +15,7 @@
 	style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2"
 	fx:controller="org.pyt.app.beans.cuentaContable.CuentaContableBean">
 	<bottom>
-		<FlowPane fx:id="buttons" alignment="CENTER" BorderPane.alignment="CENTER" prefHeight="80.0/>
+		<FlowPane fx:id="buttons" alignment="CENTER" BorderPane.alignment="CENTER" prefHeight="80.0"/>
 	</bottom>
 	<center>
 		<BorderPane prefHeight="80.0" prefWidth="200.0">
