--- a/ea-contabilidad/ea-app/src/main/resources/view/splash/splash.fxml
+++ b/ea-contabilidad/ea-app/src/main/resources/view/splash/splash.fxml
@@ -30,7 +30,7 @@
       <children>
         <ImageView fx:id="fondo" fitHeight="304.0" fitWidth="600.0" layoutX="0.0" layoutY="14.0" opacity="1.0" pickOnBounds="true">
           <image>
-            <Image url="@../../images/ok.png" />
+            <Image url="@../../images/logo_ea.jpg" />
           </image>
         </ImageView>
       </children>
@@ -38,6 +38,11 @@
   </center>
   <top>
     <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" text="Easy Counting By JAPL" textAlignment="RIGHT" BorderPane.alignment="BOTTOM_RIGHT">
+      <BorderPane.margin>
+        <Insets left="20.0" right="20.0" />
+      </BorderPane.margin>
+    </Label>
+    <Label fx:id="version" alignment="CENTER_LEFT" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="31.0" text="v1.0.0.0" textAlignment="LEFT" BorderPane.alignment="BOTTOM_LEFT">
       <BorderPane.margin>
         <Insets left="20.0" right="20.0" />
       </BorderPane.margin>
